--- a/Erasmus/LIP/Example/assignment.tex
+++ b/Erasmus/LIP/Example/assignment.tex
@@ -290,22 +290,22 @@ Choose variable to bring to the basis
 \begin{Shaded}
 \begin{Highlighting}[]
 \KeywordTok{def}\NormalTok{ ratio\_test():}
-\NormalTok{    enter }\OperatorTok{=}\NormalTok{ np.argmax(T[}\OperatorTok{{-}}\DecValTok{1}\NormalTok{][:n }\OperatorTok{+}\NormalTok{ m])}
+\NormalTok{    enter }\OperatorTok{=}\NormalTok{ np.argmax(T[}\OperatorTok{{-}}\DecValTok{1}\NormalTok{][:n }\OperatorTok{+}\NormalTok{ m]) }\CommentTok{\# index of biggest reduced cost}
     \ControlFlowTok{if}\NormalTok{ T[}\OperatorTok{{-}}\DecValTok{1}\NormalTok{][enter] }\OperatorTok{\textless{}=} \DecValTok{0}\NormalTok{:}
-        \ControlFlowTok{return}\NormalTok{ [}\VariableTok{None}\NormalTok{, }\VariableTok{None}\NormalTok{] }\CommentTok{\# optimal}
+        \ControlFlowTok{return}\NormalTok{ [}\VariableTok{None}\NormalTok{, }\VariableTok{None}\NormalTok{] }\CommentTok{\# no positive rc {-} optimal}
 
 \NormalTok{    ratios }\OperatorTok{=}\NormalTok{ [}
-\NormalTok{        T[j][}\OperatorTok{{-}}\DecValTok{1}\NormalTok{] }\OperatorTok{/}\NormalTok{ T[j][enter]}
+\NormalTok{        T[j][}\OperatorTok{{-}}\DecValTok{1}\NormalTok{] }\OperatorTok{/}\NormalTok{ T[j][enter] }\CommentTok{\# b term / entering column term}
         \ControlFlowTok{if}\NormalTok{ T[j][enter] }\OperatorTok{\textgreater{}} \DecValTok{0}
         \ControlFlowTok{else} \BuiltInTok{float}\NormalTok{(}\StringTok{\textquotesingle{}inf\textquotesingle{}}\NormalTok{)}
         \ControlFlowTok{for}\NormalTok{ j }\KeywordTok{in} \BuiltInTok{range}\NormalTok{(m)}
 \NormalTok{    ]}
 
-\NormalTok{    leave }\OperatorTok{=}\NormalTok{ np.argmin(ratios)}
+\NormalTok{    leave }\OperatorTok{=}\NormalTok{ np.argmin(ratios) }\CommentTok{\# index of smallest ratio}
     \ControlFlowTok{if}\NormalTok{ ratios[leave] }\OperatorTok{==} \BuiltInTok{float}\NormalTok{(}\StringTok{\textquotesingle{}inf\textquotesingle{}}\NormalTok{):}
-        \ControlFlowTok{return}\NormalTok{ [}\VariableTok{None}\NormalTok{, }\VariableTok{None}\NormalTok{] }\CommentTok{\# unbounded}
+        \ControlFlowTok{return}\NormalTok{ [}\VariableTok{None}\NormalTok{, }\VariableTok{None}\NormalTok{] }\CommentTok{\# all ratio terms are \textless{}= 0 {-} unbounded}
 
-    \ControlFlowTok{return}\NormalTok{ [enter, leave]}
+    \ControlFlowTok{return}\NormalTok{ [enter, leave] }\CommentTok{\# indices in T}
 
 \NormalTok{enter, leave }\OperatorTok{=}\NormalTok{ ratio\_test()}
 \BuiltInTok{print}\NormalTok{(}\SpecialStringTok{f"pivot: (}\SpecialCharTok{\{}\NormalTok{enter}\SpecialCharTok{\}}\SpecialStringTok{, }\SpecialCharTok{\{}\NormalTok{leave}\SpecialCharTok{\}}\SpecialStringTok{)"}\NormalTok{)}
@@ -322,10 +322,10 @@ leave
 \begin{Shaded}
 \begin{Highlighting}[]
 \KeywordTok{def}\NormalTok{ update\_tableau(enter, leave):}
-\NormalTok{    T[leave] }\OperatorTok{/=}\NormalTok{ T[leave][enter]}
+\NormalTok{    T[leave] }\OperatorTok{/=}\NormalTok{ T[leave][enter] }\CommentTok{\# normalize row to get 1 in entering col}
     \ControlFlowTok{for}\NormalTok{ j }\KeywordTok{in} \BuiltInTok{range}\NormalTok{(m }\OperatorTok{+} \DecValTok{1}\NormalTok{):}
         \ControlFlowTok{if}\NormalTok{ j }\OperatorTok{!=}\NormalTok{ leave:}
-\NormalTok{            T[j] }\OperatorTok{{-}=}\NormalTok{ T[leave] }\OperatorTok{*}\NormalTok{ T[j][enter]}
+\NormalTok{            T[j] }\OperatorTok{{-}=}\NormalTok{ T[leave] }\OperatorTok{*}\NormalTok{ T[j][enter] }\CommentTok{\# all other rows set to 0 in entering col}
 
 \NormalTok{update\_tableau(enter, leave)}
 \NormalTok{tableau(T)}
@@ -410,7 +410,7 @@ the optimal solution \(x_1\), \(x_3\) and \(x_4\) will be in basis.
 
 \CommentTok{\# b and d}
 \NormalTok{T[:m, }\OperatorTok{{-}}\DecValTok{1}\NormalTok{] }\OperatorTok{=}\NormalTok{ A\_Binv }\OperatorTok{@}\NormalTok{ b}
-\NormalTok{T[}\OperatorTok{{-}}\DecValTok{1}\NormalTok{, }\OperatorTok{{-}}\DecValTok{1}\NormalTok{] }\OperatorTok{=} \OperatorTok{{-}}\NormalTok{ c[B] }\OperatorTok{@}\NormalTok{ (T[:m, }\OperatorTok{{-}}\DecValTok{1}\NormalTok{])}
+\NormalTok{T[}\OperatorTok{{-}}\DecValTok{1}\NormalTok{, }\OperatorTok{{-}}\DecValTok{1}\NormalTok{] }\OperatorTok{=} \OperatorTok{{-}}\NormalTok{ c[B] }\OperatorTok{@}\NormalTok{ T[:m, }\OperatorTok{{-}}\DecValTok{1}\NormalTok{]}
 
 \CommentTok{\# make it pretty again}
 \NormalTok{T }\OperatorTok{=}\NormalTok{ np.array(T, dtype }\OperatorTok{=} \BuiltInTok{object}\NormalTok{)}
@@ -508,10 +508,256 @@ words: there is slack in the \(2^{nd}\) constraint of the Dual.
 
 \newpage
 
-\section{7 - Sensitivity analysis - increase desk net
-profit}\label{sensitivity-analysis---increase-desk-net-profit}
+\section{7 - Increased Net Profit}\label{increased-net-profit}
 
-\subsubsection{TODO}\label{todo}
+As mentioned previously - the increase in the reduced cost is equal to
+the increase in the original net profit. So change in desk net profit
+from 13 to 15 would cause the increase in the reduced cost of \(x_2\) of
+2, which is more than 1, so we will be able to do one more iteration of
+the simplex and bring \(x_2\) in the basis.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{T[}\OperatorTok{{-}}\DecValTok{1}\NormalTok{][}\DecValTok{1}\NormalTok{] }\OperatorTok{+=} \DecValTok{2} \CommentTok{\# increase x2 reduced cost}
+\NormalTok{tableau(T)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+
+|    x1 |    x2 |    x3 |    x4 |    x5 |    x6 |    x7 |    -z |     b |
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+
+|     1 |     1 |     0 |     0 |     1 |     2 |    -1 |     0 |    39 |
+|     0 |     1 |     1 |     0 |     0 |     4 |    -1 |     0 |    48 |
+|     0 |    -1 |     0 |     1 |    -1 |    -5 |     2 |     0 |    30 |
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+
+|     0 |     1 |     0 |     0 |    -2 |    -1 |    -3 |     1 | -1827 |
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{pivot()}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+
+|    x1 |    x2 |    x3 |    x4 |    x5 |    x6 |    x7 |    -z |     b |
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+
+|     1 |     1 |     0 |     0 |     1 |     2 |    -1 |     0 |    39 |
+|    -1 |     0 |     1 |     0 |    -1 |     2 |     0 |     0 |     9 |
+|     1 |     0 |     0 |     1 |     0 |    -3 |     1 |     0 |    69 |
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+
+|    -1 |     0 |     0 |     0 |    -3 |    -3 |    -2 |     1 | -1866 |
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+
+\end{verbatim}
+
+We reach a new optimal solution with an even higher objective function.
+
+\newpage
+
+\section{8 - Increased Material
+Availability}\label{increased-material-availability}
+
+We need to recalculate the final b - column of the tableau.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{\# b and d}
+\NormalTok{T[:m, }\OperatorTok{{-}}\DecValTok{1}\NormalTok{] }\OperatorTok{=}\NormalTok{ A\_Binv }\OperatorTok{@}\NormalTok{ (b }\OperatorTok{+}\NormalTok{ [}\DecValTok{0}\NormalTok{, }\DecValTok{125} \OperatorTok{{-}} \DecValTok{117}\NormalTok{, }\DecValTok{0}\NormalTok{]) }\CommentTok{\# new b}
+\NormalTok{T[}\OperatorTok{{-}}\DecValTok{1}\NormalTok{, }\OperatorTok{{-}}\DecValTok{1}\NormalTok{] }\OperatorTok{=} \OperatorTok{{-}}\NormalTok{ c[B] }\OperatorTok{@}\NormalTok{ T[:m, }\OperatorTok{{-}}\DecValTok{1}\NormalTok{]}
+
+\CommentTok{\# make pretty again}
+\ControlFlowTok{for}\NormalTok{ j }\KeywordTok{in} \BuiltInTok{range}\NormalTok{(m }\OperatorTok{+} \DecValTok{1}\NormalTok{):}
+\NormalTok{    T[j][}\OperatorTok{{-}}\DecValTok{1}\NormalTok{] }\OperatorTok{=}\NormalTok{ Fraction(}\BuiltInTok{round}\NormalTok{(T[j][}\OperatorTok{{-}}\DecValTok{1}\NormalTok{]))}
+
+\NormalTok{tableau(T)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+
+|    x1 |    x2 |    x3 |    x4 |    x5 |    x6 |    x7 |    -z |     b |
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+
+|     1 |     1 |     0 |     0 |     1 |     2 |    -1 |     0 |    55 |
+|     0 |     1 |     1 |     0 |     0 |     4 |    -1 |     0 |    80 |
+|     0 |    -1 |     0 |     1 |    -1 |    -5 |     2 |     0 |   -10 |
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+
+|     0 |    -1 |     0 |     0 |    -2 |    -1 |    -3 |     1 | -1835 |
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+
+\end{verbatim}
+
+We get an infeasible solution. We would need to apply the dual simplex
+in order to retrieve feasibility.
+
+\subsubsection{TODO: apply the dual
+here?}\label{todo-apply-the-dual-here}
+
+\newpage
+
+\section{9 - New Product}\label{new-product}
+
+We need to insert a new column into our tableau, calculate it for the
+current iteration and check wether we should bring the new variable into
+the basis or not.
+
+\small
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{T }\OperatorTok{=}\NormalTok{ np.column\_stack([}
+\NormalTok{    T[:, :n }\OperatorTok{+}\NormalTok{ m],}
+\NormalTok{    np.zeros(m }\OperatorTok{+} \DecValTok{1}\NormalTok{), }\CommentTok{\# insert new column after the slacks as x8}
+\NormalTok{    T[:, n }\OperatorTok{+}\NormalTok{ m:]}
+\NormalTok{])}
+
+\NormalTok{n }\OperatorTok{+=} \DecValTok{1}
+
+\CommentTok{\# new column updated}
+\NormalTok{T[:m, }\DecValTok{7}\NormalTok{] }\OperatorTok{=}\NormalTok{ A\_Binv }\OperatorTok{@}\NormalTok{ [}\DecValTok{3}\NormalTok{, }\DecValTok{1}\NormalTok{, }\DecValTok{2}\NormalTok{]}
+\NormalTok{T[}\OperatorTok{{-}}\DecValTok{1}\NormalTok{, }\DecValTok{7}\NormalTok{] }\OperatorTok{=} \DecValTok{14} \OperatorTok{{-}}\NormalTok{ c[B] }\OperatorTok{@}\NormalTok{ T[:m, }\DecValTok{7}\NormalTok{]}
+
+\CommentTok{\# make pretty again}
+\ControlFlowTok{for}\NormalTok{ j }\KeywordTok{in} \BuiltInTok{range}\NormalTok{(m }\OperatorTok{+} \DecValTok{1}\NormalTok{):}
+\NormalTok{    T[j][}\DecValTok{7}\NormalTok{] }\OperatorTok{=}\NormalTok{ Fraction(}\BuiltInTok{round}\NormalTok{(T[j][}\DecValTok{7}\NormalTok{]))}
+
+\NormalTok{tableau(T)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+-------+
+|    x1 |    x2 |    x3 |    x4 |    x5 |    x6 |    x7 |    x8 |    -z |     b |
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+-------+
+|     1 |     1 |     0 |     0 |     1 |     2 |    -1 |     3 |     0 |    39 |
+|     0 |     1 |     1 |     0 |     0 |     4 |    -1 |     2 |     0 |    48 |
+|     0 |    -1 |     0 |     1 |    -1 |    -5 |     2 |    -4 |     0 |    30 |
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+-------+
+|     0 |    -1 |     0 |     0 |    -2 |    -1 |    -3 |     1 |     1 | -1827 |
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+-------+
+\end{verbatim}
+
+\normalsize
+
+We observe that new variable's reduced cost is positive.
+
+\small
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{pivot()}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+-------+
+|    x1 |    x2 |    x3 |    x4 |    x5 |    x6 |    x7 |    x8 |    -z |     b |
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+-------+
+|   1/3 |   1/3 |     0 |     0 |   1/3 |   2/3 |  -1/3 |     1 |     0 |    13 |
+|  -2/3 |   1/3 |     1 |     0 |  -2/3 |   8/3 |  -1/3 |     0 |     0 |    22 |
+|   4/3 |   1/3 |     0 |     1 |   1/3 |  -7/3 |   2/3 |     0 |     0 |    82 |
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+-------+
+|  -1/3 |  -4/3 |     0 |     0 |  -7/3 |  -5/3 |  -8/3 |     0 |     1 | -1840 |
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+-------+
+\end{verbatim}
+
+\normalsize
+
+Turns out coffee tables are worth producing.
+
+\newpage
+
+\section{10 - New Constraint}\label{new-constraint}
+
+We need to introduce a new row, but also a new slack column. The new
+constraint is: \[
+x_3 \le 5x_2 \implies 0x_1 - 5x_2 + x_3 + 0x_4 \le 0
+\]
+
+Since each Simplex iteration is just elementary row operations, we can
+simply add the new constraint to the final tableau without having to
+recalculate anything.
+
+\small
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{T }\OperatorTok{=}\NormalTok{ np.column\_stack([}
+\NormalTok{    T[:, :n }\OperatorTok{+}\NormalTok{ m],}
+\NormalTok{    np.zeros(m }\OperatorTok{+} \DecValTok{1}\NormalTok{), }\CommentTok{\# new slack}
+\NormalTok{    T[:, n }\OperatorTok{+}\NormalTok{ m:]}
+\NormalTok{])}
+
+\NormalTok{T }\OperatorTok{=}\NormalTok{ np.vstack([}
+\NormalTok{    T[:m, :],}
+\NormalTok{    [}\DecValTok{0}\NormalTok{, }\OperatorTok{{-}}\DecValTok{5}\NormalTok{, }\DecValTok{1}\NormalTok{, }\DecValTok{0}\NormalTok{, }\DecValTok{0}\NormalTok{, }\DecValTok{0}\NormalTok{, }\DecValTok{0}\NormalTok{, }\DecValTok{1}\NormalTok{, }\DecValTok{0}\NormalTok{, }\DecValTok{0}\NormalTok{], }\CommentTok{\# new constraint}
+\NormalTok{    T[}\OperatorTok{{-}}\DecValTok{1}\NormalTok{, :]}
+\NormalTok{])}
+
+\NormalTok{m }\OperatorTok{+=} \DecValTok{1}
+
+\CommentTok{\# make pretty again}
+\ControlFlowTok{for}\NormalTok{ j }\KeywordTok{in} \BuiltInTok{range}\NormalTok{(m }\OperatorTok{+} \DecValTok{1}\NormalTok{):}
+\NormalTok{    T[j][}\DecValTok{7}\NormalTok{] }\OperatorTok{=}\NormalTok{ Fraction(T[j][}\DecValTok{7}\NormalTok{])}
+\ControlFlowTok{for}\NormalTok{ i }\KeywordTok{in} \BuiltInTok{range}\NormalTok{(n }\OperatorTok{+}\NormalTok{ m }\OperatorTok{+} \DecValTok{2}\NormalTok{):}
+\NormalTok{    T[}\DecValTok{3}\NormalTok{][i] }\OperatorTok{=}\NormalTok{ Fraction(T[}\DecValTok{3}\NormalTok{][i])}
+
+\NormalTok{tableau(T)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+-------+
+|    x1 |    x2 |    x3 |    x4 |    x5 |    x6 |    x7 |    x8 |    -z |     b |
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+-------+
+|     1 |     1 |     0 |     0 |     1 |     2 |    -1 |     0 |     0 |    39 |
+|     0 |     1 |     1 |     0 |     0 |     4 |    -1 |     0 |     0 |    48 |
+|     0 |    -1 |     0 |     1 |    -1 |    -5 |     2 |     0 |     0 |    30 |
+|     0 |    -5 |     1 |     0 |     0 |     0 |     0 |     1 |     0 |     0 |
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+-------+
+|     0 |    -1 |     0 |     0 |    -2 |    -1 |    -3 |     0 |     1 | -1827 |
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+-------+
+\end{verbatim}
+
+\normalsize
+
+Now we just need to bring the tableau into the canonical form. We can
+already make some assumpions about what will happen after we do that. In
+current solution we aren't producing any desks, because they're less
+valuable than chairs. So after we introduce the new constraint on chair
+production their production will have to go down - or the desk
+production will have to go up instead of something more valuable. Either
+way we expect a loss in our income, which means the solution that we
+have right now will become infeasible.
+
+\small
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{update\_tableau(}\DecValTok{2}\NormalTok{, }\DecValTok{1}\NormalTok{) }\CommentTok{\# pivot of the column that breaks the canonical form}
+\NormalTok{tableau(T)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+-------+
+|    x1 |    x2 |    x3 |    x4 |    x5 |    x6 |    x7 |    x8 |    -z |     b |
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+-------+
+|     1 |     1 |     0 |     0 |     1 |     2 |    -1 |     0 |     0 |    39 |
+|     0 |     1 |     1 |     0 |     0 |     4 |    -1 |     0 |     0 |    48 |
+|     0 |    -1 |     0 |     1 |    -1 |    -5 |     2 |     0 |     0 |    30 |
+|     0 |    -6 |     0 |     0 |     0 |    -4 |     1 |     1 |     0 |   -48 |
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+-------+
+|     0 |    -1 |     0 |     0 |    -2 |    -1 |    -3 |     0 |     1 | -1827 |
+|-------+-------+-------+-------+-------+-------+-------+-------+-------+-------+
+\end{verbatim}
+
+\normalsize
+
+As expected - we reached the canonical form and our solution became
+infeasible. Similarly as with increasing material availability - we
+would have to apply the dual simplex.
 
 
 
